--- a/HTML/BM Search.html
+++ b/HTML/BM Search.html
@@ -41,7 +41,7 @@
     </Script>
 </head>
 
-<body>
+<body style="background-color:powderblue;">
     <table id="tableData">
         <caption>
             <b>Book Managemanet</b>
