--- a/HTML/BM Sorting.html
+++ b/HTML/BM Sorting.html
@@ -40,7 +40,7 @@
     </Script>
   </head>
   
-<body>
+<body style="background-color:powderblue;">
 <h2>Book Management System</h2>
 
 <p>Click below button for  Ascending Order</p>
