--- a/HTML/Book Management in HTML.html
+++ b/HTML/Book Management in HTML.html
@@ -12,7 +12,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color:powderblue;">
  	<h1>Book Management</h1>
       <p style="text-align:center;"></p>
 <table>
